--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "description": "",
   "devDependencies": {
     "@playwright/test": "^1.48.0",
-    "@types/node": "^22.7.5"
+    "@types/node": "^22.7.5",
+    "allure-playwright": "^3.0.5"
   }
 }
